Added information + Style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,83 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>REPLACE THIS WITH A TABLE TITLE</h1>
-    <div class="table-container">REPLACE THIS WITH YOUR GENERATED TABLE</div>
+    <h1>Deadliest known earthquakes in history.</h1>
+    <div class="table-container">
+      <table class="tg">
+      <thead>
+        <tr>
+          <th class="tg-0pky">Date</th>
+          <th class="tg-0pky">Location</th>
+          <th class="tg-0pky">Magnitude / Depth of Epicenter</th>
+          <th class="tg-0pky">Number of Fatalities (Estimated)</th>
+          <th class="tg-0pky">Summary of Damage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="tg-0pky">January 23, 1556</td>
+          <td class="tg-0pky">Shaanxi, China</td>
+          <td class="tg-0pky">8.0 / Unknown</td>
+          <td class="tg-0pky">830,000</td>
+          <td class="tg-0pky">More than 97 counties in China were affected. A 520-mile area destroyed.</td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">January 12, 2010</td>
+          <td class="tg-0pky">Port-au-Prince, Haiti</td>
+          <td class="tg-0pky">7.0 / 13 km</td>
+          <td class="tg-0pky">316,000</td>
+          <td class="tg-0pky">Critical infrastructure severely damaged.</td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">December 13, 115</td>
+          <td class="tg-0pky">Antioch, Turkey</td>
+          <td class="tg-0pky">7.5 / Unknown</td>
+          <td class="tg-0pky">260,000</td>
+          <td class="tg-0pky">Antioch and surrounding areas suffered severe damage. <br> A local tsunami was trigged causing damage tothe coast of lebanon</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">probably May 20 - 29, 526</td>
+          <td class="tg-0lax">Antioch, Turkey</td>
+          <td class="tg-0lax">7.0 / Unknown</td>
+          <td class="tg-0lax">250,000</td>
+          <td class="tg-0lax">Severe damage to many of the buildings of Antioch. <br> Followed by a fire which destroyed most of the buildings left standing.</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">July 28, 1976</td>
+          <td class="tg-0lax">Tangshan, China</td>
+          <td class="tg-0lax">7.6 / 12.2</td>
+          <td class="tg-0lax">242,769</td>
+          <td class="tg-0lax">Estimated up to 85% of the building collapsed.</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">September 30, 1139</td>
+          <td class="tg-0lax">Gyzndzha, Azerbaijan</td>
+          <td class="tg-0lax">7.7 / 23km</td>
+          <td class="tg-0lax">230,000</td>
+          <td class="tg-0lax">Not much is documented on this specific quake.</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">December 26, 2004</td>
+          <td class="tg-0lax">Sumatra, Indonesia</td>
+          <td class="tg-0lax">9.3 / 30km</td>
+          <td class="tg-0lax">227,899</td>
+          <td class="tg-0lax">Resulted in a series of large tsunamis with victims accross 14 countries in the region.</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">December 16, 1920</td>
+          <td class="tg-0lax">Gansu, China</td>
+          <td class="tg-0lax">8.25 / Unknown</td>
+          <td class="tg-0lax">200,000</td>
+          <td class="tg-0lax">Damage accross 7 provinces. I nsome cities all buildings collapsed or were buried by landslides.</td>
+        </tr>
+        <tr>
+          <td class="tg-0lax">December 28, 893</td>
+          <td class="tg-0lax">Dvin, Armenia</td>
+          <td class="tg-0lax">6 / Unknown</td>
+          <td class="tg-0lax">150,000</td>
+          <td class="tg-0lax">City of Dvin was destroyed with the collapse of most buildings, defensive walls, and palaces.</td>
+        </tr>
+      </tbody>
+      </table></div>
   </body>
 </html>
